--- a/_basicsettheory/_html/head-book.html
+++ b/_basicsettheory/_html/head-book.html
@@ -5,6 +5,8 @@
     font-size: 150%;
     margin:-20px -20px 20px -20px;
     line-height:120%;
+    text-decoration: none!important;
+    display:block;
 }
 .book-title, #quarto-search svg {
     color: #800000!important;
