--- a/_basicsettheory/_html/mathhead.html
+++ b/_basicsettheory/_html/mathhead.html
@@ -52,7 +52,7 @@
         font-variant: small-caps;
         font-size: 120%;
      }
-     .active, .active .chapter-number {
+     #quarto-sidebar .active, .active .chapter-number {
         color:#000000!important;
         font-weight: 700!important;
      }
