--- a/_html/website.html
+++ b/_html/website.html
@@ -3,7 +3,7 @@
     {
     "@context": "http://schema.org",
     "@type": "WebSite",
-          "name": "{{< meta website.title >}}",
-        "url": "{{< meta website.site-url >}}"
+          "name": "Direct Knowledge",
+        "url": "https://directknowledge.com"
     }
 </script>
