--- a/_html/organization.html
+++ b/_html/organization.html
@@ -2,24 +2,24 @@
     {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "{{< var name >}}",
-    "url": "{{< var siteurl >}}",
-    "logo": "{{< var siteLogo >}}",
+    "name": "Direct Knowledge",
+    "url": "https://diretcknowledge.com",
+    "logo": "http://directknowledge.com/assets/directknowledge-logo.svg",
     "foundingDate": "2017",
     "founders": [
     {
     "@type": "Person",
-    "name": "{{< var alternateName >}}"
+    "name": "David Andrew Smith"
     },
     {
     "@type": "Person",
-    "name": "{{< var personName >}}"
+    "name": "David A. Smith"
     } ],
     "address": {
     "@type": "PostalAddress",
-    "addressLocality": "{{< var personAddressLocality >}}",
-    "addressRegion": "{{< var personAddressRegion >}}",
-    "addressCountry": "{{< var personAddressCountry >}}"
+    "addressLocality": "Fort Worth",
+    "addressRegion": "Texas",
+    "addressCountry": "United States"
     },
     "contactPoint": {
     "@type": "ContactPoint",
@@ -28,7 +28,7 @@
     },
     "sameAs": [
     "https://youtube.com/@directknowledge",
-    "{{< var personSameAsGitHub >}}"
+    "https://github.com/directknowledge/"
     ]
     }
 </script>
