--- a/_html/person.html
+++ b/_html/person.html
@@ -2,28 +2,28 @@
   {
   "@context": "http://www.schema.org",
   "@type": "Person",
-   "@id": "{{< var personId >}}",
-  "name": "{{< var personName >}}",
-  "nationality": "{{< var nationality >}}",
+   "@id": "https://directknowledge.com/#person",
+  "name": "David A. Smith",
+  "nationality": "United States",
   "birthPlace" : {
       "@type": "Place",
       "address": {
           "@type": "PostalAddress",
-          "addressLocality": "{{< var birthPlaceaddressLocality >}}",
-          "addressRegion": "{{< var birthPlaceaddressRegion >}}",
-          "addressCountry": "{{< var birthPlaceaddressCountry >}}"
+          "addressLocality": "Forth Worth",
+          "addressRegion": "Texas",
+          "addressCountry": "United States"
       }
   },
   "alumniOf": [
       {
-       "@type": "{{< var alumniOfType >}}",
-       "name": "{{< var alumniOfName >}}",
-       "sameAs": "{{< var alumniOfSameAs >}}"
+       "@type": "CollegeOrUniversity",
+       "name": "University of Texas at Arlington",
+       "sameAs": "https://en.wikipedia.org/wiki/University_of_Texas_at_Arlington"
       }
   ],
   "gender": "Male",
-  "Description": "{{< var personDescription >}}",
-  "disambiguatingDescription": "{{< var disambiguatingDescription >}}",
+  "Description": "Mathematician",
+  "disambiguatingDescription": "Founder of Direct Knowledge",
   "hasCredential": [
     {
       "@type": "EducationalOccupationalCredential",
@@ -36,8 +36,8 @@
       },
       "recognizedBy": {
         "@type": "CollegeOrUniversity",
-        "name": "{{< var alumniOfName >}}",
-        "sameAs": "{{< var alumniOfSameAs >}}"
+        "name": "University of Texas at Arlington",
+        "sameAs": "https://en.wikipedia.org/wiki/University_of_Texas_at_Arlington"
       }
     },
     {
@@ -51,30 +51,31 @@
       },
       "recognizedBy": {
         "@type": "CollegeOrUniversity",
-        "name": "{{< var alumniOfName >}}",
-        "sameAs": "{{< var alumniOfSameAs >}}"
+        "name": "University of Texas at Arlington",
+        "sameAs": "https://en.wikipedia.org/wiki/University_of_Texas_at_Arlington"
       }
     }
   ],
-  "jobTitle": "{{< var jobTitle >}}",
+  "jobTitle": "Mathematics Educator",
   "worksFor": [
       {
           "@type": "Organization",
-          "name": "{{< var worksForName >}}",
-          "sameAs": "{{< var worksForSameAs >}}"
+          "name": "Direct Knowledge",
+          "sameAs": "https://directknowledge.com"
       }
   ],
-  "url": "{{< var personURL >}}",
-  "image": "{{< var personImage >}}",
+  "url": "http://directknowledge.com/about.html",
+  "image": "https://directknowledge.com/assets/directknowledge-profile.png",
   "address": {
       "@type": "PostalAddress",
-      "addressLocality": "{{< var personAddressLocality >}}",
-      "addressRegion": "{{< var personAddressRegion >}}",
-      "addressCountry": "{{< var personAddressCountry >}}"
+      "addressLocality": "Fort Worth",
+      "addressRegion": "Texas",
+      "addressCountry": "United States"
   },
   "sameAs": [
-      "{{< var personSameAsGitHub >}}",
+      "https://github.com/directknowledge/",
       "https://youtube.com/@directknowledge"
       ]
   }
   </script>
+  
