--- a/_html/analytics.html
+++ b/_html/analytics.html
@@ -29,9 +29,9 @@ function initGTM () {
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){ dataLayer.push(arguments); }
 	  gtag('js', new Date());
-	  gtag('config', 'G-5QFN2LRJNN');
+	  gtag('config', 'G-899QW82HQV');
 	}
-	script.src = 'https://www.googletagmanager.com/gtag/js?id=G-5QFN2LRJNN';
+	script.src = 'https://www.googletagmanager.com/gtag/js?id=G-899QW82HQV';
 	
 	// We are still deferring the script
 	script.defer = true;
